# Lets-Do-Cpp

1-InitialBenchmark/: CMakeLists.txt  README.md  benchmark.cpp
1-InitialBenchmark/InitialBenchmark/: InitialBenchmark.sln  InitialBenchmark.vcxproj  InitialBenchmark.vcxproj.filters  vectortest.cpp  vectortest.h
1-InitialBenchmark/InitialBenchmark/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj
1-InitialBenchmark/InitialBenchmark/ConsoleApplication2/: ConsoleApplication2.cpp  ConsoleApplication2.sln  ConsoleApplication2.vcxproj
2_SocketLibrary/: 2_SocketLibrary.sln  main.cpp
2_SocketLibrary/linux/: .gitignore  CMakeLists.txt  diff.py
2_SocketLibrary/linux/include/: socket.hpp
2_SocketLibrary/linux/source/: main.cpp  main2.cpp
2_SocketLibrary/win/: 2_SocketLibrary.vcxproj  2_SocketLibrary.vcxproj.filters  SocketLibrary.h
Lets-Do-Cpp/: Lets-Do-Cpp.sln  Lets-Do-Cpp.vcxproj  main.cpp
Lets-Do-Cpp/x64/Debug/: Lets-Do-Cpp.exe.recipe  Lets-Do-Cpp.ilk  Lets-Do-Cpp.vcxproj.FileListAbsolute.txt  vc143.idb
Lets-Do-Cpp/x64/Debug/Lets-Do-Cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lets-Do-Cpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
